# multidim-irt

./: README.md  analysis.ipynb  config.toml  dataset.py  dyna_to_pyirt.py  generate_pyirt_file.py  mario  multidim.toml  nn_multidim.toml  plot_curves_amortized.R  pyproject.toml  run_luigi.py  topics.ipynb  train_nn_irt.py
multidim/: config.py  dyna_to_pyirt.py  dynaboard_datasets.py  figures.py  log.py  nn_2pl.py  tasks.py  topic.py
multidim/tests/: test_datasets.py
test_fixtures/: mini_amazon_reviews.jsonl
