[tool.poetry]
name = "dyna-irt"
version = "0.1.0"
description = ""
authors = ["Pedro Rodriguez"]

[tool.poetry.dependencies]
# For py-irt
numpy = "^1.20.3"
pandas = "^1.1"
pyro-ppl = "^1.6.0"
python = "^3.8"
pedroai = "^0.2.0"
typer = "^0.4.0"
ipykernel = "^6.0.3"
openTSNE = "^0.6.0"
pytest = "^6.2.5"
luigi = "^3.0.3"
pandasql = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b2"
isort = "^5.8.0"
pylint = "^2.8.3"
ipython = "^7.24.1"
notebook = "^6.4.4"
mypy = "^0.920"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
